--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Tilt+Neon&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <input type="text" placeholder="Search fruit 🍎">
-    <div id="results-bar">
-        <ul></ul>
-    </div>
+    <section id="container">
+        <input type="text" placeholder="Search fruit 🍎">
+        <div id="results-bar">
+            <ul></ul>
+        </div>
+    </section>
     <script src="app.js"></script>
     <script src="app.test.js"></script>
 </body>
